--- a/Assets/UXML/AttackPresetVisualTree.uxml
+++ b/Assets/UXML/AttackPresetVisualTree.uxml
@@ -2,6 +2,7 @@
     <Style src="project://database/Assets/Styles/HorizontalGroup.uss?fileID=7433441132597879392&amp;guid=d008cab1c76c4a840a34894416291b23&amp;type=3#HorizontalGroup" />
     <ui:VisualElement style="flex-grow: 1;">
         <uie:ObjectField label="Animation" allow-scene-objects="false" type="UnityEngine.AnimationClip, UnityEngine.AnimationModule" binding-path="animationClip" name="AnimationField" />
+        <uie:ObjectField label="Animator Override" type="UnityEngine.AnimatorOverrideController, UnityEngine.AnimationModule" binding-path="overrideController" />
     </ui:VisualElement>
     <ui:VisualElement style="flex-grow: 1;">
         <ui:Foldout text="Attacks">
