--- a/Assets/UXML/AttackPresetVisualTree.uxml
+++ b/Assets/UXML/AttackPresetVisualTree.uxml
@@ -1,8 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" xsi="http://www.w3.org/2001/XMLSchema-instance" engine="UnityEngine.UIElements" editor="UnityEditor.UIElements" noNamespaceSchemaLocation="../../UIElementsSchema/UIElements.xsd" editor-extension-mode="True">
     <Style src="project://database/Assets/Styles/HorizontalGroup.uss?fileID=7433441132597879392&amp;guid=d008cab1c76c4a840a34894416291b23&amp;type=3#HorizontalGroup" />
     <ui:VisualElement style="flex-grow: 1;">
-        <uie:ObjectField label="Animation" allow-scene-objects="false" type="UnityEngine.AnimationClip, UnityEngine.AnimationModule" binding-path="animationClip" name="AnimationField" />
-        <uie:ObjectField label="Animator Override" type="UnityEngine.AnimatorOverrideController, UnityEngine.AnimationModule" binding-path="overrideController" />
+        <uie:ObjectField label="Animation Human" allow-scene-objects="false" type="UnityEngine.AnimationClip, UnityEngine.AnimationModule" binding-path="animationClipHuman" name="AnimationField" />
+        <uie:ObjectField label="Animation Beast" allow-scene-objects="false" type="UnityEngine.AnimationClip, UnityEngine.AnimationModule" binding-path="animationClipBeast" name="AnimationField2" focusable="true" />
     </ui:VisualElement>
     <ui:VisualElement style="flex-grow: 1;">
         <ui:Foldout text="Attacks">
